--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "url": "https://github.com/step-batch-7/geometry-shiviraj/issues"
   },
   "homepage": "https://github.com/step-batch-7/geometry-shiviraj#readme",
-  "dependencies": {
-    "chai": "^4.2.0"
+  "dependencies": {},
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^7.1.0",
+    "nyc": "^15.0.0"
   }
 }
